--- a/mandatory_exercise_02/app/src/main/AndroidManifest.xml
+++ b/mandatory_exercise_02/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Lifeify">
         <activity
+            android:name=".SectionsActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
