--- a/mandatory_exercise_02/gradle/libs.versions.toml
+++ b/mandatory_exercise_02/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ activity = "1.12.0"
 constraintlayout = "2.2.1"
 legacySupportV4 = "1.0.0"
 recyclerview = "1.3.0"
+cardview = "1.0.0"
 
 [libraries]
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
@@ -22,6 +23,7 @@ activity = { group = "androidx.activity", name = "activity", version.ref = "acti
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
